# stm32-keyboard-firmware

./: Cargo.toml  flash.gdb  notes.txt
src/: main.rs
