[package]
name = "stm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"]}
stm32f0xx-hal = { version = "0.18", features = ["rt", "stm32f042", "stm32-usbd"]}
panic-halt = "0.2.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
stm32-usbd = { version = "0.6.0"}
usbd-hid-device = "0.1.1"
usbd-hid = "0.6.1"

[profile.release]
opt-level = 3
debug = 0
strip = true
